# Logos

./: .gitignore  Cargo.toml  README.md
Arachne/: Cargo.toml  README.md  docker-compose.yml
Arachne/src/: consumer.rs  db.rs  lib.rs  producer.rs
src/: main.rs
web_crawler/: Cargo.toml  docker-compose.yml
web_crawler/src/: kafka_stress_test.rs  lib.rs  main.rs
